--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2016-2017 Claudiu Soroiu
+  ~ Copyright (c) 2016-2018 Claudiu Soroiu
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -75,6 +75,18 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>ro.derbederos.hamcrest</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <executions>
@@ -83,7 +95,7 @@
                         <configuration>
                             <!-- compile everything to ensure module-info contains right entries -->
                             <!-- required when JAVA_HOME is JDK 8 or below -->
-                            <release>9</release>
+                            <release>10</release>
                         </configuration>
                     </execution>
                     <execution>
@@ -102,7 +114,7 @@
                 <configuration>
                     <!-- Only required when JAVA_HOME isn't at least Java 9 and when haven't configured the maven-toolchains-plugin -->
                     <jdkToolchain>
-                        <version>9</version>
+                        <version>10</version>
                     </jdkToolchain>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -139,7 +151,7 @@
                 </executions>
                 <configuration>
                     <jdkToolchain>
-                        <version>9</version>
+                        <version>10</version>
                     </jdkToolchain>
                     <source>1.8</source>
                     <sourceFileExcludes>
@@ -147,6 +159,7 @@
                     </sourceFileExcludes>
                     <!-- this seems to be an issue with javadoc which needs User-Agent set -->
                     <additionalJOption>-J-Dhttp.agent=javadoc</additionalJOption>
+                    <additionalOptions>-html5</additionalOptions>
                     <failOnError>false</failOnError>
                     <links>
                         <link>http://static.javadoc.io/org.hamcrest/hamcrest-all/${hamcrest.version}</link>
