--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
                         <configuration>
                             <!-- compile everything to ensure module-info contains right entries -->
                             <!-- required when JAVA_HOME is JDK 8 or below -->
-                            <release>9</release>
+                            <release>10</release>
                         </configuration>
                     </execution>
                     <execution>
@@ -114,7 +114,7 @@
                 <configuration>
                     <!-- Only required when JAVA_HOME isn't at least Java 9 and when haven't configured the maven-toolchains-plugin -->
                     <jdkToolchain>
-                        <version>9</version>
+                        <version>10</version>
                     </jdkToolchain>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -123,6 +123,13 @@
                     </compilerArgs>
                     <showDeprecation>true</showDeprecation>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>6.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -151,7 +158,7 @@
                 </executions>
                 <configuration>
                     <jdkToolchain>
-                        <version>9</version>
+                        <version>10</version>
                     </jdkToolchain>
                     <source>1.8</source>
                     <sourceFileExcludes>
