--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <hamcrest.version>1.3</hamcrest.version>
-        <junit.version>4.12</junit.version>
-        <jacoco.version>0.8.1</jacoco.version>
+        <junit.version>5.3.1</junit.version>
+        <jacoco.version>0.8.2</jacoco.version>
         <proguard.version>6.0.3</proguard.version>
     </properties>
 
@@ -179,8 +179,8 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
