--- a/pom.xml
+++ b/pom.xml
@@ -65,10 +65,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <hamcrest.version>1.3</hamcrest.version>
-        <junit.version>5.3.2</junit.version>
-        <jacoco.version>0.8.2</jacoco.version>
-        <proguard.version>6.0.3</proguard.version>
+        <hamcrest.version>2.1</hamcrest.version>
+        <junit.version>5.5.2</junit.version>
+        <jacoco.version>0.8.5</jacoco.version>
+        <proguard.version>6.2.0</proguard.version>
     </properties>
 
     <build>
@@ -173,7 +173,7 @@
     <dependencies>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
+            <artifactId>hamcrest</artifactId>
             <version>${hamcrest.version}</version>
             <scope>provided</scope>
         </dependency>
@@ -251,7 +251,7 @@
                     <plugin>
                         <groupId>com.github.wvengen</groupId>
                         <artifactId>proguard-maven-plugin</artifactId>
-                        <version>2.0.14</version>
+                        <version>2.1.1</version>
                         <executions>
                             <execution>
                                 <id>proguard-obfuscate</id>
