--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <hamcrest.version>2.2</hamcrest.version>
-        <junit.version>5.5.2</junit.version>
-        <jacoco.version>0.8.5</jacoco.version>
-        <proguard.version>6.2.2</proguard.version>
+        <junit.version>5.7.2</junit.version>
+        <jacoco.version>0.8.7</jacoco.version>
     </properties>
 
     <build>
@@ -140,7 +139,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.3.1</version>
                 <executions>
                     <execution>
                         <id>attach-javadoc</id>
@@ -202,6 +201,14 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+          <groupId>org.assertj</groupId>
+          <artifactId>assertj-core</artifactId>
+          <!-- use 2.9.1 for Java 7 projects -->
+          <version>3.20.2</version>
+          <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -237,47 +244,6 @@
                                 </configuration>
                             </execution>
                         </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>proguard</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.github.wvengen</groupId>
-                        <artifactId>proguard-maven-plugin</artifactId>
-                        <version>2.1.1</version>
-                        <executions>
-                            <execution>
-                                <id>proguard-obfuscate</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>proguard</goal>
-                                </goals>
-                                <configuration>
-                                    <proguardVersion>${proguard.version}</proguardVersion>
-                                    <proguardInclude>${basedir}/proguard-project.txt</proguardInclude>
-                                    <obfuscate>true</obfuscate>
-                                    <attach>true</attach>
-                                    <appendClassifier>false</appendClassifier>
-                                    <addMavenDescriptor>true</addMavenDescriptor>
-                                    <injar>${project.build.finalName}.jar</injar>
-                                    <injarNotExistsSkip>true</injarNotExistsSkip>
-                                </configuration>
-                            </execution>
-                        </executions>
-                        <dependencies>
-                            <dependency>
-                                <groupId>net.sf.proguard</groupId>
-                                <artifactId>proguard-base</artifactId>
-                                <version>${proguard.version}</version>
-                            </dependency>
-                        </dependencies>
                     </plugin>
                 </plugins>
             </build>
